<resources>
    <string name="app_name">CourseApp</string>
    <string name="below_50">below 50</string>
    <string name="_100">100</string>
    <string name="_90">90</string>
    <string name="_80">80</string>
    <string name="_70">70</string>
    <string name="_60">60</string>
    <string name="_50">50</string>
    <string name="question1">Rate the revelancy of the subject from 1 to 100</string>
    <string name="question2">Rate the teacher\'s overall performance from 1 to 100</string>
    <string name="question3">Rate the teacher\'s preparation from 1 to 100</string>
    <string name="question4">Rate the teacher\'s feedback from 1 to 100</string>
    <string name="question5">Rate the teacher\'s examp1es from 1 to 100</string>
    <string name="question6">Rate your job opportunities from 1 to 100</string>

    <string name="next">Next</string>
    <string name="faisal">Faisal</string>
    <string name="oskar">Oskar</string>
    <string name="david">David</string>
    <string name="submit">Submit</string>
    <string name="android_app">Android App</string>
    <string name="intro_to_quantum_computing">Intro to quantum computing</string>
    <string name="relativity_theory">Relativity theory</string>
    <string name="intro_to_energy_over_matter">Intro to energy over matter</string>
    <string name="choose_a_course_to_rate">Choose a course to rate</string>
    <string name="back">Back</string>
    <string name="go_to_teacher">go to teacher</string>
</resources>
