<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="239dp" />

    <TextView
        android:id="@+id/question_box"
        android:layout_width="369dp"
        android:layout_height="87dp"
        android:text="@string/question"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Choose a teacher to rate" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="628dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_box">

        <Button
            android:id="@+id/button_faisal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faisal" />

        <Button
            android:id="@+id/button_oskar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oskar" />

        <Button
            android:id="@+id/button_david"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/david" />

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v4.view.ViewPager>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>